# HTI_4_visual_contents_analysis_Lab2

./: Makefile  Netpbm_format.htm  globals.h  pdefilter.c  pdefilter.h  permal.c  utilities.c  utilities.h
IMA4509-TP3-images/: angiogra.pgm  aquitain.pgm  barbara128.pgm  brodatz-herringbone-weave.pgm  brodatz-plastic-bubbles.pgm  brodatz-tiled-roof.pgm  brodatz-wood-fence.pgm  bureau.pgm  camera25.pgm  camera25.pgm_0.250000_50_1_100.000000.pgm  carrefou.pgm  chip256.pgm  coronair.pgm  couloir.pgm  echograp.pgm  grenoble.pgm  irm.pgm  lacornou.pgm  quito.pgm
kombo_will_lab_2/src/: CMakeLists.txt  Makefile  globals.h  pdefilter.c  permal.c
src/: Makefile  README.md  nordstorm_entropique.c  nordstrom.c  nordstrom_entropique.c  pdefilter.c  pdefilter.h  permal.c  utilities.c  utilities.h
